workload/komga/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: komga
  namespace: komga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: komga
  template:
    metadata:
      labels:
        app: komga
    spec:
      containers:
        - name: komga
          image: gotson/komga:latest
          ports:
            - containerPort: 25600
          resources:
            requests:
              cpu: "1500m"
              memory: 2Gi
            limits:
              cpu: "1"
              memory: 2Gi
          volumeMounts:xw
            - name: config
              mountPath: /config
            - name: books
              mountPath: /data
              readOnly: true
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: komga-config-pvc
        - name: books
          persistentVolumeClaim:
            claimName: komga-books-pvc
            readOnly: true
---
apiVersion: v1
kind: Service
metadata:
  name: komga
  namespace: komga
spec:
  selector:
    app: komga
  ports:
    - port: 25600
      targetPort: 25600
