workload/komga/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: komga-internal
  namespace: komga
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: komga
                port:
                  number: 25600
